Changes from 0.1.4 to 0.1.5-pre1:
	- added the vtun package
	- added the ltraf package
	- all sources are stored locally at ftp.cflinux.hu for a last resort

Changes from 0.1.4-pre3 to 0.1.4:
	- version rename

Changes from 0.1.4-pre2 to 0.1.4-pre3:
	- Added the small mcom serial communications program
	- Patched rdate to support the -a option
	- Upgraded to the quagga 0.96.5
	- Upgraded net-snmp to use the unprivileged snmp user
	- Added the rp-l2tp package
	- Added the poptop package

Changes from 0.1.4-pre1 to 0.1.4-pre2:
	- Upgraded to the busybox 1.00-pre9
	- added mawk (1.3.3)
	- added the libgmp library (4.1.2)
	- added the freeswan package (2.05)
	- an mkcramfs tool is now included in the package
	- added the host mibgroup to the snmpd agent
	- upgraded to the latest openssl(0.9.6m) and openssh(3.8p1) versions

Changes from 0.1.3 to 0.1.4-pre1:
	- upgraded to the linux kernel 2.4.25
	- finally it compiles with gcc3, on debian/testing

Changes from 0.1.2 to 0.1.3:
	- added a postgresql client
	- some scripts were rewritten with flexibility kept in mind
	- pppd daemon patched to count the traffic in 64 bit. I myself
	  take use of this with the radius plugin, and there're
	  radius attributes called 'Acct-{Input-Output}-{Octets,Packtes}-64'
	  which are the 64 bit versions of the original ones.
	- pcmcia configuration fixed
	- upgraded to busybox-1.00-pre7
	- some minor bugfixes