@@ -1,7 +1,7 @@
 #!/bin/sh
 
-echo -n "Saving data "
 . /usr/lib/cfmaint/common.sh
+echo -n "Saving data "
 
 rd=`sed -n 's/^\(.*\) \/etc.*$/\1/p' /proc/mounts`
 
